test/readonly/fail/adhoc05.v3
//@execute 0=0; 1=4
def main(a: int) -> int {
	if (a == 0) return getType([0]);
	var a: array<int>;
	return getType(a);
}
def getType<T>(a: T) -> int {
	if (array<int>.?(a)) return 0;
	return 4;
}
